--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ A <b><u>PRIVOXY proxy</b></u> service is available at: <a href="http://locip:811
 The <b><u>Deluge daemon</b></u> port available at: <a href="http://locip:58846" target="_blank">locip:58846</a> -- (For Couchpotato)<br />
 The <b><u>PLEX</b></u> container is available at: <a href="http://locip:32400/web" target="_blank">locip:32400/web</a><br />
 The <b><u>PlexPy</b></u> container is available at: <a href="http://locip:8181" target="_blank">locip:8181</a><br />
+The <b><u>Radarr</b></u> container is available at: <a href="http://locip:7878" target="_blank">locip:7878</a><br />
 The <b><u>Sickrage</b></u> container is available at: <a href="http://locip:8081" target="_blank">locip:8081</a><br />
 The <b><u>Ombi</b></u> container is available at: <a href="http://locip:3579" target="_blank">locip:3579</a><br />
 The <b><u>Portainer</b></u> container is available at: <a href="http://locip:9000" target="_blank">locip:9000</a><br />
@@ -49,6 +50,21 @@ After the Wizard is complete:<br />
 <li>At the top right - Select Post Processing
 <li>On the Post Processing Tab - Go to Post Processing Dir
 <li>Click Browse > Select "downloads"
+</ul>
+<b><u>Radarr</u></b>
+<ul>
+<li>Click on the Settings icon
+<li>Clock on the Download Client Tab
+<li>Click on the + sign to add a download client
+<li>Under the "Torrent" section Select Deluge
+<li>Enter these settings:
+    * Name: Deluge
+    * Enable: Yes
+    * Host: locip
+    * Port: 8112
+    * Password: deluge (unless you have cahnged it)
+    * Category: blank
+    * Use SSL: No   
 </ul>
 <b><u>PLEX</u></b><br />
 When adding libraries to PLEX use these settings:
