--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@ After the Wizard is complete:<br />
 <li>In the To field: /movies<br />
 </ul>
 <br />
-<b><u>Sickrage</u></b>
+<b><u>Sickrage</u></b><br />
 <ul>
-<li>Click on the settings "gear" icon
-<li>Go to > General > Misc > Show root directories
-<li>Click "New" - Select "tv"
-<li>At the top right - Select Post Processing
-<li>On the Post Processing Tab - Go to Post Processing Dir
-<li>Click Browse > Select "downloads"
+<li>Click on the settings "gear" icon<br />
+<li>Go to > General > Misc > Show root directories<br />
+<li>Click "New" - Select "tv"<br />
+<li>At the top right - Select Post Processing<br />
+<li>On the Post Processing Tab - Go to Post Processing Dir<br />
+<li>Click Browse > Select "downloads"<br />
 </ul>
-<b><u>Radarr</u></b>
+<b><u>Radarr</u></b><br />
 <ul>
-<li>Click on the Settings icon
-<li>Clock on the Download Client Tab
-<li>Click on the + sign to add a download client
-<li>Under the "Torrent" section Select Deluge
-<li>Enter these settings:
-    * Name: Deluge
-    * Enable: Yes
-    * Host: locip
-    * Port: 8112
-    * Password: deluge (unless you have cahnged it)
-    * Category: blank
-    * Use SSL: No   
+<li>Click on the Settings icon<br />
+<li>Clock on the Download Client Tab<br />
+<li>Click on the + sign to add a download client<br />
+<li>Under the "Torrent" section Select Deluge<br />
+<li>Enter these settings:<br />
+    * Name: Deluge<br />
+    * Enable: Yes<br />
+    * Host: locip<br />
+    * Port: 8112<br />
+    * Password: deluge (unless you have cahnged it)<br />
+    * Category: blank<br />
+    * Use SSL: No<br />
 </ul>
 <b><u>PLEX</u></b><br />
-When adding libraries to PLEX use these settings:
+When adding libraries to PLEX use these settings:<br />
 <ul>
-<li>Movies = /data/movies
-<li>TV = /data/tvshows
+<li>Movies = /data/movies<br />
+<li>TV = /data/tvshows<br />
 </ul>
 <h1>Mediabox Management Container</h1>
 <b><u>Portainer</u></b><br />
