--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@ When adding libraries to PLEX use these settings:<br />
 <li>Movies = /data/movies<br />
 <li>TV = /data/tvshows<br />
 </ul>
-<h1>Mediabox Management Container</h1>
+<h3>Mediabox Management Containers</h3>
 <b><u>Portainer</u></b><br />
 To help you manage your Mediabox Docker containers Portainer is available.<br />
 Portainer is a Docker Management UI to help you work with the containers etc.<br />
 When you first launch Portianer select "Local" as the Docker Endpoint to Manage.
-<br />
+<br /><br />
 <b><u>Watchtower</u></b><br />
-The Watchtower container wil monitor the Portainer container, if there is an update to the Portaner base image<br />
+The Watchtower container will monitor the Portainer container, if there is an update to the Portaner base image<br />
 Watchtower will download that image, gracefully stop Portainer, and re-launch it with the new image.<br />
-The other container all generally are built to install the latest version of the program they run whenever they are restarted.<br />
-So, for example, to update Deluge (which will let you know if you are behind) all you need to do is use Portainer to "Restart" the DelugeVPN container and it will update.<br />
+The other containers are generally built to install the latest version of the program they run whenever they are restarted.<br />
+So, for example, to update Deluge (which will let you know if you are behind) use Portainer to "Restart" the DelugeVPN container and it will update.<br />
 <h1>Troubleshooting</h1>
 If you are having issues with Mediabox or any of your continers please take look at the settings being used.<br />
 Below are the variables in your .env file:
@@ -98,6 +98,6 @@ Below are the variables in your .env file:
 <iframe src="env.txt" frameborder="0" height="500" width="75%"></iframe>
 </div>
 <br />If you enjoy the project -- Fuel it with some caffeine :) 
-<br />[![Donate](https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg)](https://cash.me/$TomMorgan)
+<br /><a href="https://cash.me/$TomMorgan"><img source="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"/></a>
 </body>
 </html>
