--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ body {
 }
 </style>
 </head>
+<a href="https://cash.me/$TomMorgan"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a><br />
 <body>
 <h1>Welcome to Mediabox!</h1>
 <h3><u>Basic Information & Configuration</u></h3>
@@ -97,5 +98,7 @@ Below are the variables in your .env file:
 <div>
 <iframe src="env.txt" frameborder="0" height="500" width="75%"></iframe>
 </div>
+If you enjoy the project -- Fuel it with some caffeine :)<br />
+<a href="https://cash.me/$TomMorgan"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a>
 </body>
 </html>
