Minor format fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body {
 }
 </style>
 </head>
-<a href="https://cash.me/$TomMorgan"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a><br />
+<a href="https://cash.me/$TomMorgan" target="_blank"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a><br />
 <body>
 <h1>Welcome to Mediabox!</h1>
 <h3><u>Basic Information & Configuration</u></h3>
@@ -96,9 +96,9 @@ So, for example, to update Deluge (which will let you know if you are behind) us
 If you are having issues with Mediabox or any of your continers please take look at the settings being used.<br />
 Below are the variables in your .env file:
 <div>
-<iframe src="env.txt" frameborder="0" height="500" width="75%"></iframe>
+<iframe src="env.txt" frameborder="0" height="400" width="75%"></iframe>
 </div>
 If you enjoy the project -- Fuel it with some caffeine :)<br />
-<a href="https://cash.me/$TomMorgan"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a>
+<a href="https://cash.me/$TomMorgan" target="_blank"><img src="https://img.shields.io/badge/Donate-SquareCash-brightgreen.svg"></a>
 </body>
 </html>
